issues with mobile on safari browser, nav dosent show up, try changing pos- from fixed to absolute

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -160,10 +160,13 @@
 
 @media screen and (max-width: 960px) {
   .navbar {
-    position: sticky;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: auto;
+    width: 4rem;
     margin: 0;
     padding: 0;
-    width: 6rem;
     z-index: 10;
     font-family: var(--font);
     display: flex;
@@ -174,29 +177,29 @@
    
 
   .nav-menu {
-    position: fixed;
+    position: absolute;
     top: 0;
-    left: 0;
-    width: 100%;
-    height: 90vh;
+    bottom: 0;
+    width: 100vw;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    transform: translateX(120%);
+    transform: translateX(105%);
     opacity: 1;
     transition: all 0.5s ease;
-    z-index: 1000;
+    z-index: 100;
   }
 
   .nav-menu.active {
-    position: fixed;
-    margin: auto;
+    position: absolute;
+    bottom: 0;
+    right: 0;
     left: 0;
-    top: 0;
     width: 100vw;
-    height: 100%;
-    transform: translateX(0);
+    min-height: 100vh;
+    transform: translateX(-85%);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -225,21 +228,19 @@
   }
 
   .menu-icon {
+    margin-top: 2rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    position: sticky;
-    padding: 0.5rem 0.75rem; 
+    /* padding: 0.25rem 0.5rem;  */
     border-radius: 50%;
-    background-color: black;
-    top: 2rem;
-    right: 4rem;
+    /* background-color: black; */
     z-index: 1100;
     cursor: pointer;
   }
 
   .nav-icon {
-    padding-top: 0.25rem;
+    /* padding-top: 0.25rem; */
     color: #fff;
     font-size: 2rem;
   }
